# Course-site

course-backend/: .env  pyproject.toml
course-backend/course_backend/: Schema.py  main.py
course-backend/course_backend/crud/: crud.py
course-backend/course_backend/database/: db.py
course-backend/course_backend/rout/: rout.py
my-app/app/: globals.css  layout.tsx  page.tsx
my-app/app/Components/: Navbar .tsx  Navbar3.tsx  aboutCard.tsx  about_farm.tsx  button.tsx  comprehensiv.tsx  footer.tsx  footer2.tsx  footer_list.tsx  footer_text.tsx  header.tsx  home_cards.tsx  landing.tsx  landing_class_card.tsx  navbar2.tsx  shop_card.tsx  type.ts
my-app/app/about/: page.tsx
my-app/app/contact/: page.tsx
my-app/app/shop/: page.tsx
my-app/app/test/: page.tsx
my-app/app/text/: page.tsx
my-app/app/utils/: constant.ts  constant2.ts
